--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
+.rebar3
+_*
 .eunit
-deps
-ebin
-*~
-hyper.png
-estimates.csv
-erl_crash.dump
-*.so
 *.o
-*.d
+*.beam
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
 .rebar
+logs
+_build
+.idea
+*.iml
+rebar3.crashdump
+doc/
