--- a/rebar.config
+++ b/rebar.config
@@ -1,15 +1,16 @@
 {cover_enabled, true}.
-{deps, [
-        {bisect, "",
-         {git, "https://github.com/knutin/bisect.git", {branch, "master"}}}
-       ]}.
+{deps, []}.
 
+{profiles, [
+    {prod, [
+        {erl_opts, [no_debug_info, warnings_as_errors]}
+    ]},
+    {test, [
+        {deps, [{proper, "1.3.0"}]},
+        {erl_opts, [debug_info]}
+    ]}
+]}.
 
-{port_specs, [
-              {"priv/hyper_carray.so", ["c_src/hyper_carray.c"]}
-             ]}.
+{eunit_tests, [{dir, "test"}]}.
 
-{port_env, [
-            {"CC", "cc"},
-            {"CFLAGS", "$CFLAGS -std=c99 -Wall -Werror -O3"}
-           ]}.
+{plugins, [rebar3_proper]}.
