--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,20 @@
 {cover_enabled, true}.
 {deps, []}.
+{minimum_otp_vsn, "18.0"}.
+
+{xref_checks,[
+    %% enable most checks, but avoid 'unused calls' which is often
+    %% very verbose
+    undefined_function_calls, undefined_functions, locals_not_used,
+    deprecated_function_calls, deprecated_functions
+]}.
+
+{dialyzer, [
+    {warnings, [
+       %% Warn about undefined types and unknown functions
+       unknown
+    ]}
+]}.
 
 {profiles, [
     {prod, [
@@ -7,7 +22,7 @@
     ]},
     {test, [
         {deps, [{proper, "1.3.0"}]},
-        {erl_opts, [debug_info]}
+        {erl_opts, [debug_info, nowarn_export_all]}
     ]}
 ]}.
 
