fix all the union, estimator and reduce_precision bugs

--- a/erlang_ls.config
+++ b/erlang_ls.config
@@ -1,11 +1,7 @@
-deps_dirs:
-  - "lib/*"
-diagnostics:
-  enabled:
-    - crossref
-  disabled:
-    - dialyzer
 include_dirs:
+  - "_build/*/lib/*/include"
+  - "_build/*/lib/"
   - "include"
-  - "_build/default/lib"
-  - "_build/test/lib"
+deps_dirs:
+  - "_build/default/lib/*"
+  - "_build/test/lib/*"
