--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
     name: Erlang/OTP ${{matrix.otp}} / rebar3 ${{matrix.rebar3}}
     strategy:
       matrix:
-        otp: ['23.3', '24.0', '24.1']
+        otp: ['24.0', '24.1']
         rebar3: ['3.16.1', '3.17.0']
     steps:
       - uses: actions/checkout@v2
