--- a/rebar.config
+++ b/rebar.config
@@ -2,17 +2,20 @@
 {deps, []}.
 {minimum_otp_vsn, "24.0"}.
 
-{xref_checks,[
+{xref_checks, [
     %% enable most checks, but avoid 'unused calls' which is often
     %% very verbose
-    undefined_function_calls, undefined_functions, locals_not_used,
-    deprecated_function_calls, deprecated_functions
+    undefined_function_calls,
+    undefined_functions,
+    locals_not_used,
+    deprecated_function_calls,
+    deprecated_functions
 ]}.
 
 {dialyzer, [
     {warnings, [
-       %% Warn about undefined types and unknown functions
-       unknown
+        %% Warn about undefined types and unknown functions
+        unknown
     ]}
 ]}.
 
@@ -28,4 +31,10 @@
 
 {eunit_tests, [{dir, "test"}]}.
 
-{plugins, [rebar3_proper]}.
+{plugins, [rebar3_proper, erlfmt]}.
+
+{edoc_opts, [
+    {doclet, edoc_doclet_chunks},
+    {layout, edoc_layout_chunks},
+    {dir, "_build/default/lib/<app>/doc"}
+]}.
