--- a/rebar.config
+++ b/rebar.config
@@ -26,15 +26,17 @@
     {test, [
         {deps, [{proper, "1.3.0"}]},
         {erl_opts, [debug_info, nowarn_export_all]}
+    ]},
+    {docs, [
+        {edoc_opts, [
+            {preprocess, true},
+            {doclet, edoc_doclet_chunks},
+            {layout, edoc_layout_chunks},
+            {dir, "_build/default/lib/hyper/doc"}
+        ]}
     ]}
 ]}.
 
 {eunit_tests, [{dir, "test"}]}.
 
 {plugins, [rebar3_proper, erlfmt]}.
-
-{edoc_opts, [
-    {doclet, edoc_doclet_chunks},
-    {layout, edoc_layout_chunks},
-    {dir, "_build/default/lib/<app>/doc"}
-]}.
