--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,12 @@ jobs:
     name: Erlang/OTP ${{matrix.otp}} / rebar3 ${{matrix.rebar3}}
     strategy:
       matrix:
-        otp: ['24.0', '24.1']
-        rebar3: ['3.16.1', '3.17.0']
+        otp: ["24.0", "24.1"]
+        rebar3: ["3.16.1", "3.17.0"]
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
         with:
           otp-version: ${{matrix.otp}}
           rebar3-version: ${{matrix.rebar3}}
-      - run: rebar3 eunit
+      - run: rebar3 ct
