--- a/rebar.config
+++ b/rebar.config
@@ -37,4 +37,14 @@
     ]}
 ]}.
 
-{plugins, [rebar3_proper, erlfmt]}.
+{plugins, [rebar3_proper]}.
+
+{project_plugins, [rebar3_ex_doc, rebar3_hex, erlfmt]}.
+
+{ex_doc, [
+     {extras, ["README.md", "LICENSE", "CHANGELOG.md"]},
+     {main, <<"hyper">>},
+     {source_url, "https://github.com/LivewareProblems/hyper"}
+]}.
+
+{hex, [{doc, ex_doc}]}.
