--- a/rebar.config
+++ b/rebar.config
@@ -26,14 +26,6 @@
     {test, [
         {deps, [{proper, "1.3.0"}]},
         {erl_opts, [debug_info, nowarn_export_all]}
-    ]},
-    {docs, [
-        {edoc_opts, [
-            {preprocess, true},
-            {doclet, edoc_doclet_chunks},
-            {layout, edoc_layout_chunks},
-            {dir, "_build/default/lib/hyper/doc"}
-        ]}
     ]}
 ]}.
 
@@ -42,9 +34,11 @@
 {project_plugins, [rebar3_ex_doc, rebar3_hex, erlfmt]}.
 
 {ex_doc, [
-     {extras, ["README.md", "LICENSE", "CHANGELOG.md"]},
-     {main, <<"hyper">>},
-     {source_url, "https://github.com/LivewareProblems/hyper"}
+    {extras, ["README.md", "LICENSE", "CHANGELOG.md"]},
+    {main, <<"hyper">>},
+    {source_url, "https://github.com/LivewareProblems/hyper"}
 ]}.
 
-{hex, [{doc, ex_doc}]}.
+{hex, [
+    {doc, #{provider => ex_doc}}
+]}.
